# deep-learning-with-pytorch

./: README.md  pyproject.toml
Deep Networks/: deep_nn.ipynb  deeper_nn_with_modulelist.ipynb  dropout_classification.ipynb  dropout_regression.ipynb  initialization_on_mnist.ipynb  initialization_on_mnist_2.ipynb  momentum_with_polynomial_fn.ipynb  nn_with_momentum.ipynb  same_weight_initialization.ipynb
Logistic Regression Cross Entropy Loss/: cross_entropy.ipynb  file1.ipynb
Shallow Neural Networks/: activation_functions.ipynb  activation_functions_on_mnist.ipynb  multi_neurons.ipynb  multidimensional_neural_network.ipynb  simple_neural_network.ipynb  two_layer_nn_with_mnist.ipynb
Softmax Regression/: softmax_classifier_mnist.ipynb  softmax_in_1d.ipynb
