[project]
name = "deep-learning-with-pytorch"
version = "0.1.0"
description = "This repository contains code examples and implementations of deep learning concepts using PyTorch. The focus is on practical applications and understanding the fundamentals of deep learning."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
